--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@types/react-dom": "^17.0.8",
     "react": "17.0.1",
     "react-dom": "17.0.1",
+    "react-router-last-location": "^2.0.1",
     "react-scripts": "4.0.3",
     "typescript": "^4.3.4",
     "web-vitals": "^1.0.1"
