--- a/package.json
+++ b/package.json
@@ -27,18 +27,23 @@
     "@types/react": "^17.0.11",
     "@types/react-dom": "^17.0.8",
     "@types/react-router-dom": "^5.1.7",
+    "@typescript-eslint/eslint-plugin": "^4.4.1",
+    "@typescript-eslint/parser": "^4.28.0",
     "@typescript-eslint/scope-manager": "^4.27.0",
     "babel-loader": "^8.2.2",
+    "eslint": "^7.29.0",
+    "eslint-config-prettier": "^8.3.0",
+    "eslint-plugin-import": "^2.22.0",
+    "eslint-plugin-jest": "24.3.6",
+    "eslint-plugin-jsx-a11y": "^6.3.1",
+    "eslint-plugin-react": "^7.20.3",
+    "eslint-plugin-react-hooks": "^4.0.8",
     "monaco-editor": "^0.25.2",
     "node-sass": "^6.0.0",
-    "prettier": "^2.3.2",
+    "prettier": "2.3.2",
     "react-dom": "^17.0.2",
     "react-scripts": "^4.0.3",
     "tslib": "^2.3.0",
-    "tslint": "^6.1.3",
-    "tslint-config-prettier": "^1.18.0",
-    "tslint-plugin-prettier": "^2.3.0",
-    "tslint-react": "^5.0.0",
     "typescript": "^4.3.4",
     "webpack": "^5.40.0",
     "webpack-merge": "^5.8.0"
@@ -46,27 +51,12 @@
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
-    "test": "react-scripts test",
+    "build-storybook": "build-storybook -s public",
     "eject": "react-scripts eject",
-    "tslint-check": "tslint-config-prettier-check ./tslint.json",
+    "format": "prettier --write 'src/**/*.{js,ts,tsx,scss,css,json}'",
+    "lint": "eslint . --ext .js,.jsx,.ts,.tsx src --color",
     "storybook": "start-storybook -p 6006 -s public",
-    "build-storybook": "build-storybook -s public"
-  },
-  "eslintConfig": {
-    "extends": [
-      "react-app",
-      "react-app/jest"
-    ],
-    "overrides": [
-      {
-        "files": [
-          "**/*.stories.*"
-        ],
-        "rules": {
-          "import/no-anonymous-default-export": "off"
-        }
-      }
-    ]
+    "test": "react-scripts test"
   },
   "browserslist": {
     "production": [
