--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   },
   "devDependencies": {
     "@babel/core": "^7.14.6",
+    "@patternfly/react-icons": "^4.11.0",
     "@storybook/addon-actions": "^6.3.0",
     "@storybook/addon-essentials": "^6.3.0",
     "@storybook/addon-links": "^6.3.0",
@@ -41,6 +42,7 @@
     "monaco-editor": "^0.25.2",
     "node-sass": "^6.0.0",
     "prettier": "2.3.2",
+    "prop-types": "^15.7.2",
     "react-dom": "^17.0.2",
     "react-scripts": "^4.0.3",
     "tslib": "^2.3.0",
