prevent stories from getting linted

--- a/.yarnrc.yml
+++ b/.yarnrc.yml
@@ -1,1 +1,27 @@
 yarnPath: ".yarn/releases/yarn-berry.cjs"
+packageExtensions:
+  "@storybook/addon-actions@*":
+    peerDependencies:
+      react-dom: "*"
+  "@storybook/addons@*":
+    peerDependencies:
+      react-dom: "*"
+  "@storybook/api@*":
+    peerDependencies:
+      react: "*"
+      react-dom: "*"
+  "@storybook/client-api@*":
+    peerDependencies:
+      react: "*"
+      react-dom: "*"
+  "@storybook/core@*":
+    peerDependencies:
+      "webpack": "4"
+  "@storybook/html@*":
+    peerDependencies:
+      "@babel/core": "^7.0.0-0"
+      react: "*"
+      react-dom: "*"
+  "@mdx-js/loader@*":
+    peerDependencies:
+      "react": "*"
