--- a/package.json
+++ b/package.json
@@ -2,6 +2,9 @@
   "name": "zimara-ui",
   "version": "0.1.0",
   "private": true,
+  "engines": {
+    "node": ">=14.x"
+  },
   "dependencies": {
     "@monaco-editor/react": "^4.2.1",
     "@patternfly/patternfly": "^4.108.2",
@@ -12,13 +15,15 @@
   },
   "devDependencies": {
     "@babel/core": "^7.14.6",
+    "@mdx-js/react": "^1.6.22",
     "@patternfly/react-icons": "^4.11.0",
-    "@storybook/addon-actions": "^6.3.0",
-    "@storybook/addon-essentials": "^6.3.0",
-    "@storybook/addon-links": "^6.3.0",
-    "@storybook/node-logger": "^6.3.0",
+    "@storybook/addon-a11y": "^6.3.1",
+    "@storybook/addon-actions": "^6.3.1",
+    "@storybook/addon-docs": "^6.3.1",
+    "@storybook/addon-links": "^6.3.1",
+    "@storybook/node-logger": "^6.3.1",
     "@storybook/preset-create-react-app": "^3.1.7",
-    "@storybook/react": "^6.3.0",
+    "@storybook/react": "^6.3.1",
     "@testing-library/dom": "^8.0.0",
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^12.0.0",
@@ -47,7 +52,8 @@
     "react-scripts": "^4.0.3",
     "tslib": "^2.3.0",
     "typescript": "^4.3.4",
-    "webpack": "^5.40.0",
+    "webpack": "4",
+    "webpack-hot-middleware": "^2.25.0",
     "webpack-merge": "^5.8.0"
   },
   "scripts": {
@@ -70,6 +76,18 @@
       "last 1 chrome version",
       "last 1 firefox version",
       "last 1 safari version"
+    ]
+  },
+  "eslintConfig": {
+    "overrides": [
+      {
+        "files": [
+          "**/*.stories.*"
+        ],
+        "rules": {
+          "import/no-anonymous-default-export": "off"
+        }
+      }
     ]
   }
 }
