add missing web-vitals package, workaround for history package

--- a/.yarnrc.yml
+++ b/.yarnrc.yml
@@ -1,1 +1,6 @@
 yarnPath: ".yarn/releases/yarn-berry.cjs"
+
+packageExtensions:
+  react-router-last-location@*:
+    dependencies:
+      history: '*'
