--- a/package.json
+++ b/package.json
@@ -55,7 +55,8 @@
     "typescript": "^4.3.4",
     "webpack": "4",
     "webpack-hot-middleware": "^2.25.0",
-    "webpack-merge": "^5.8.0"
+    "webpack-merge": "^5.8.0",
+    "yaml-loader": "^0.6.0"
   },
   "scripts": {
     "start": "react-scripts start",
