--- a/tsconfig.json
+++ b/tsconfig.json
@@ -26,7 +26,9 @@
     "isolatedModules": true
   },
   "include": [
-    "src"
+    "**/src/**/*.tsx",
+    "**/src/**/*.ts",
+    "**/src/**/*.js"
   ],
   "exclude": [
     "node_modules",
