--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "@mdx-js/react": "^1.6.22",
     "@patternfly/react-icons": "^4.11.0",
     "@storybook/addon-a11y": "^6.3.1",
-    "@storybook/addon-essentials": "^6.3.6",
+    "@storybook/addon-actions": "^6.3.1",
+    "@storybook/addon-docs": "^6.3.1",
     "@storybook/addon-links": "^6.3.1",
     "@storybook/node-logger": "^6.3.1",
     "@storybook/preset-create-react-app": "^3.1.7",
