--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "@typescript-eslint/parser": "^4.28.0",
     "@typescript-eslint/scope-manager": "^4.27.0",
     "babel-loader": "^8.2.2",
+    "chromatic": "^5.10.0-canary.0",
     "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-import": "^2.22.0",
     "eslint-plugin-jest": "24.3.6",
