--- a/package.json
+++ b/package.json
@@ -11,6 +11,10 @@
     "@patternfly/react-core": "^4.128.2",
     "@types/d3": "^7.0.0",
     "d3": "^7.0.0",
+    "d3-scale": "^4.0.0",
+    "d3-shape": "^3.0.1",
+    "d3-transition": "^3.0.1",
+    "d3-zoom": "^3.0.0",
     "react": "17.0.1",
     "react-router-dom": "^5.2.0",
     "react-router-last-location": "^2.0.1",
@@ -41,12 +45,14 @@
     "@typescript-eslint/scope-manager": "^4.27.0",
     "babel-loader": "^8.2.2",
     "chromatic": "^5.10.0-canary.0",
+    "d3-selection": "^3.0.0",
     "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-import": "^2.22.0",
     "eslint-plugin-jest": "24.3.6",
     "eslint-plugin-jsx-a11y": "^6.3.1",
     "eslint-plugin-react": "^7.20.3",
     "eslint-plugin-react-hooks": "^4.0.8",
+    "lodash": "^4.17.21",
     "monaco-editor": "^0.25.2",
     "node-sass": "^6.0.0",
     "prettier": "2.3.2",
