--- a/package.json
+++ b/package.json
@@ -11,8 +11,10 @@
     "@patternfly/react-core": "^4.128.2",
     "@types/d3": "^7.0.0",
     "d3": "^7.0.0",
+    "konva": "^8.1.3",
     "react": "17.0.1",
     "react-flow-renderer": "^9.6.6",
+    "react-konva": "^17.0.2-5",
     "react-router-dom": "^5.2.0",
     "react-router-last-location": "^2.0.1",
     "uuid": "^8.3.2",
