update env variable

--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
 REACT_APP_API_URL=https://zimaraio.github.io/zimara-backend-mock
-CHROMATIC_STORYBOOK_VERSION='@storybook/react@4.0-alpha.8'
+CHROMATIC_STORYBOOK_VERSION='@storybook/react@6.2.0'
