--- a/.github/workflows/chromatic.yml
+++ b/.github/workflows/chromatic.yml
@@ -6,11 +6,13 @@ on: push
 
 # List of jobs
 jobs:
-  test:
+  Chromatic:
     # Operating System
     runs-on: ubuntu-latest
+    #if: ${{ github.actor == 'dependabot[bot]' }}
     # Job steps
     steps:
+      #- run: echo "PR created by Dependabot"
       - uses: actions/checkout@v1
       - run: yarn
         #👇 Adds Chromatic as a step in the workflow
