--- a/package.json
+++ b/package.json
@@ -53,6 +53,7 @@
     "eslint-plugin-jsx-a11y": "^6.3.1",
     "eslint-plugin-react": "^7.20.3",
     "eslint-plugin-react-hooks": "^4.0.8",
+    "html-webpack-plugin": "^5.4.0",
     "monaco-editor": "^0.29.0",
     "node-sass": "^6.0.1",
     "prettier": "2.4.1",
