--- a/package.json
+++ b/package.json
@@ -5,6 +5,19 @@
   "engines": {
     "node": ">=14.x"
   },
+  "scripts": {
+    "start": "webpack-cli serve",
+    "build": "webpack --mode production",
+    "dev": "webpack serve --progress",
+    "build-storybook": "build-storybook -s public",
+    "chromatic": "CHROMATIC_STORYBOOK_VERSION='@storybook/react@6.2.0' chromatic --exit-zero-on-changes",
+    "eject": "react-scripts eject",
+    "format": "prettier --write 'src/**/*.{js,ts,tsx,scss,css,json}'",
+    "lint": "eslint . --ext .js,.jsx,.ts,.tsx src --color",
+    "storybook": "start-storybook -p 6006 -s public",
+    "test": "react-scripts test",
+    "test:coverage": "react-scripts test --coverage --watchAll=false"
+  },
   "dependencies": {
     "@monaco-editor/react": "^4.3.1",
     "@patternfly/patternfly": "^4.108.2",
@@ -15,6 +28,7 @@
     "react-konva": "^17.0.2-5",
     "react-router-dom": "^5.2.0",
     "react-router-last-location": "^2.0.1",
+    "react-shadow": "^19.0.2",
     "use-debounce": "^7.0.0",
     "uuid": "^8.3.2",
     "web-vitals": "^2.1.0"
@@ -60,24 +74,16 @@
     "prop-types": "^15.7.2",
     "react-dom": "^17.0.2",
     "react-scripts": "^4.0.3",
+    "style-loader": "^3.3.0",
+    "ts-loader": "^9.2.6",
     "tslib": "^2.3.0",
     "typescript": "~4.3.5",
     "webpack": "5",
+    "webpack-cli": "^4.9.1",
+    "webpack-dev-server": "^4.3.1",
     "webpack-hot-middleware": "^2.25.0",
     "webpack-merge": "^5.8.0",
     "yaml-loader": "^0.6.0"
-  },
-  "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "build-storybook": "build-storybook -s public",
-    "chromatic": "CHROMATIC_STORYBOOK_VERSION='@storybook/react@6.2.0' chromatic --exit-zero-on-changes",
-    "eject": "react-scripts eject",
-    "format": "prettier --write 'src/**/*.{js,ts,tsx,scss,css,json}'",
-    "lint": "eslint . --ext .js,.jsx,.ts,.tsx src --color",
-    "storybook": "start-storybook -p 6006 -s public",
-    "test": "react-scripts test",
-    "test:coverage": "react-scripts test --coverage --watchAll=false"
   },
   "browserslist": {
     "production": [
