type fixes, environment var fixes, first prototype with federated module

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -5,7 +5,7 @@
     "baseUrl": ".",
     "esModuleInterop": true,
     "forceConsistentCasingInFileNames": true,
-    //"importHelpers": true,
+    "importHelpers": true,
     "isolatedModules": false,
     "jsx": "react-jsx",
     "lib": [
