--- a/package.json
+++ b/package.json
@@ -56,11 +56,14 @@
     "@types/react": "^17.0.29",
     "@types/react-dom": "^17.0.8",
     "@types/react-router-dom": "^5.3.1",
+    "@types/uuid": "^8.3.1",
     "@typescript-eslint/eslint-plugin": "^4.33.0",
     "@typescript-eslint/parser": "^4.33.0",
     "@typescript-eslint/scope-manager": "^5.0.0",
     "babel-loader": "^8.2.2",
     "chromatic": "^6.0.4",
+    "css-loader": "^6.4.0",
+    "dotenv": "^10.0.0",
     "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-import": "^2.22.0",
     "eslint-plugin-jest": "25.0.5",
