--- a/package.json
+++ b/package.json
@@ -77,6 +77,7 @@
     "prop-types": "^15.7.2",
     "react-dom": "^17.0.2",
     "react-scripts": "^4.0.3",
+    "source-map-loader": "^3.0.0",
     "style-loader": "^3.3.0",
     "ts-loader": "^9.2.6",
     "tslib": "^2.3.0",
