--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,4 @@
 # See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
-.env
 
 # dependencies
 /node_modules
@@ -14,11 +13,14 @@
 
 # misc
 .DS_Store
+.env
 .env.local
 .env.development.local
 .env.test.local
 .env.production.local
 
+# logs
+build-storybook.log*
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
