set noEmit to false to prevent issues with index.tsx

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -14,7 +14,7 @@
     ],
     "module": "esnext",
     "moduleResolution": "node",
-    "noEmit": true,
+    "noEmit": false,
     "noFallthroughCasesInSwitch": true,
     "noImplicitAny": true,
     "noImplicitReturns": false,
