--- a/package.json
+++ b/package.json
@@ -68,7 +68,10 @@
     "eslint-plugin-jsx-a11y": "^6.3.1",
     "eslint-plugin-react": "^7.20.3",
     "eslint-plugin-react-hooks": "^4.0.8",
+    "eslint-webpack-plugin": "^3.0.1",
+    "fork-ts-checker-webpack-plugin": "^6.4.0",
     "html-webpack-plugin": "^5.4.0",
+    "jest": "^27.3.1",
     "monaco-editor": "^0.29.0",
     "node-sass": "^6.0.1",
     "prettier": "2.4.1",
@@ -77,6 +80,7 @@
     "react-scripts": "^4.0.3",
     "source-map-loader": "^3.0.0",
     "style-loader": "^3.3.0",
+    "ts-jest": "^27.0.7",
     "ts-loader": "^9.2.6",
     "tslib": "^2.3.0",
     "typescript": "~4.3.5",
@@ -113,12 +117,9 @@
   },
   "jest": {
     "coveragePathIgnorePatterns": [
+      "/.yarn/cache/",
       "/node_modules/",
-      "react-app-env.d.ts",
-      "src/components/Map.tsx",
-      "src/index.tsx",
-      "src/test-utils.tsx",
-      "src/pages/App.tsx",
+      "src/App.tsx",
       "src/.*index.ts"
     ],
     "coverageThreshold": {
@@ -126,6 +127,8 @@
         "branches": 90,
         "lines": 90
       }
-    }
+    },
+    "preset": "ts-jest",
+    "testEnvironment": "node"
   }
 }
