--- a/package.json
+++ b/package.json
@@ -7,12 +7,11 @@
     "node": ">=14.x"
   },
   "scripts": {
-    "start": "webpack serve --hot",
-    "build": "webpack --mode production  --config webpack.prod.js",
+    "start": "webpack serve --mode development --hot --progress --config webpack.dev.js",
+    "build": "webpack --mode production --config webpack.prod.js",
     "build-storybook": "build-storybook -s public",
     "chromatic": "npx chromatic",
     "clean": "rimraf dist",
-    "dev": "webpack serve --progress --config webpack.dev.js",
     "format": "prettier --check 'src'",
     "format:fix": "prettier --write --ignore-unknown 'src'",
     "lint": "eslint --ext .ts,.tsx,.js ./src",
@@ -105,6 +104,7 @@
     "ts-jest": "27.0.7",
     "ts-loader": "9.2.6",
     "tsconfig-paths-webpack-plugin": "3.5.1",
+    "tslib": "^2.3.1",
     "typescript": "4.4.4",
     "url-loader": "4.1.1",
     "webpack": "5.60.0",
