--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,9 +1,9 @@
 {
   "extends": "./tsconfig.build.json",
-  "include": ["src", "test", "types", "webpack.config.js", "setupTests.ts"],
   "compilerOptions": {
     "allowJs": false,
     "baseUrl": ".",
-    "typeRoots": ["./node_modules/@types", "./types"],
-  }
+    "typeRoots": ["./node_modules/@types"],
+  },
+  "include": ["src", "webpack.config.js", "setupTests.ts"]
 }
