--- a/package.json
+++ b/package.json
@@ -53,6 +53,7 @@
     "@storybook/manager-webpack5": "6.3.12",
     "@storybook/node-logger": "6.4.0-beta.20",
     "@storybook/react": "6.4.0-beta.20",
+    "@testing-library/dom": "^8.10.1",
     "@testing-library/jest-dom": "5.14.1",
     "@testing-library/react": "12.1.2",
     "@testing-library/user-event": "13.5.0",
