--- a/.gitignore
+++ b/.gitignore
@@ -24,3 +24,8 @@ build-storybook.log*
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
+
+# yarn berry stuff
+.yarn/install-state.gz
+.yarn/unplugged
+
