--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "zimara-ui",
+  "name": "kaoto-ui",
   "version": "0.1.0",
   "private": true,
-  "federatedModuleName": "zimara",
+  "federatedModuleName": "kaoto",
   "engines": {
     "node": ">=14.x"
   },
