--- a/package.json
+++ b/package.json
@@ -35,9 +35,9 @@
     "react-router-dom": "5.3.0",
     "react-router-last-location": "2.0.1",
     "react-shadow": "19.0.2",
-    "uniforms": "3.6.2",
-    "uniforms-bridge-json-schema": "3.6.2",
-    "uniforms-patternfly": "4.7.3",
+    "uniforms": "^3.6.2",
+    "uniforms-bridge-json-schema": "^3.6.2",
+    "uniforms-patternfly": "^4.7.4",
     "use-debounce": "7.0.0",
     "uuid": "8.3.2",
     "web-vitals": "2.1.2",
