--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "@monaco-editor/react": "4.3.1",
     "@patternfly/patternfly": "4.151.4",
     "@patternfly/react-core": "4.168.8",
+    "@rhoas/app-services-ui-shared": "^0.15.4",
     "ajv": "^8.8.2",
     "konva": "8.2.3",
     "react": "17.0.2",
