--- a/.yarnrc.yml
+++ b/.yarnrc.yml
@@ -5,4 +5,8 @@ packageExtensions:
     dependencies:
       history: "*"
 
+plugins:
+  - path: .yarn/plugins/@yarnpkg/plugin-outdated.cjs
+    spec: "https://mskelton.dev/yarn-outdated/v2"
+
 yarnPath: .yarn/releases/yarn-3.1.0.cjs
