--- a/package.json
+++ b/package.json
@@ -104,7 +104,7 @@
     "url-loader": "4.1.1",
     "webpack": "5.60.0",
     "webpack-cli": "4.9.1",
-    "webpack-dev-server": "4.3.1",
+    "webpack-dev-server": "^4.7.3",
     "webpack-merge": "^5.8.0",
     "yaml-loader": "0.6.0"
   },
