--- a/package.json
+++ b/package.json
@@ -68,7 +68,7 @@
     "@types/react-router-dom": "5.3.2",
     "@types/testing-library__jest-dom": "5.14.1",
     "@types/uuid": "8.3.1",
-    "@typescript-eslint/eslint-plugin": "5.2.0",
+    "@typescript-eslint/eslint-plugin": "^5.10.0",
     "@typescript-eslint/parser": "5.2.0",
     "chromatic": "^6.4.1",
     "css-loader": "6.4.0",
