--- a/package.json
+++ b/package.json
@@ -32,11 +32,10 @@
     "@patternfly/react-core": "4.168.8",
     "@rhoas/app-services-ui-shared": "^0.15.4",
     "ajv": "^8.8.2",
-    "konva": "8.2.3",
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-error-boundary": "3.1.3",
-    "react-konva": "17.0.2-5",
+    "react-flow-renderer": "^9.7.3",
     "react-router-dom": "5.3.0",
     "react-router-last-location": "2.0.1",
     "react-shadow": "19.0.2",
