--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "node": ">=14.x"
   },
   "scripts": {
-    "start": "webpack serve --mode development --hot --host 0.0.0.0 --progress --config webpack.dev.js ",
+    "start": "webpack serve --mode development --hot --progress --config webpack.dev.js ",
+    "prod": "webpack serve --mode production --port 8080 --host 0.0.0.0 --progress --config webpack.prod.js ",
     "build": "webpack --mode production --config webpack.prod.js",
     "build-storybook": "build-storybook -s public",
     "chromatic": "npx chromatic",
