--- a/.github/workflows/generate-docker-image.yml
+++ b/.github/workflows/generate-docker-image.yml
@@ -1,18 +1,21 @@
 name: 🧐 Generate Docker image
 on:
+  pull_request:
+    branches:
+      - 'main'
   push:
     tags:
       - 'v*'
   workflow_dispatch:
   schedule:
     - cron:  '12 0 * * *'
-
 jobs:
   build:
     name: 👩🏼‍🏭 Build Docker Image 👩🏼‍🏭
     runs-on: ubuntu-latest
-      - name: 🤳 Build Docker Image 🤳 
-        run: docker build -t kaotoio/frontend .
+    steps:
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v1
       - name: Login to DockerHub
         uses: docker/login-action@v1
         with:
@@ -22,12 +25,19 @@ jobs:
         id: meta
         uses: docker/metadata-action@v3
         with:
-          images: kaotoio/backend
+          images: kaotoio/frontend
+          tags: |
+            type=schedule
+            type=ref,event=branch
+            type=ref,event=pr
+            type=semver,pattern={{version}}
+            type=semver,pattern={{major}}.{{minor}}
+            type=semver,pattern={{major}}
+            type=sha
       - name: Build and push
         uses: docker/build-push-action@v2
         with:
-          context: .
-          push: true
+          push: ${{ github.event_name != 'pull_request' }}
           tags: ${{ steps.meta.outputs.tags }}
           labels: ${{ steps.meta.outputs.labels }}
       - name: Image digest
