--- a/.github/workflows/generate-docker-image.yml
+++ b/.github/workflows/generate-docker-image.yml
@@ -18,6 +18,8 @@ jobs:
         uses: docker/setup-buildx-action@v1
       - name: Login to DockerHub
         uses: docker/login-action@v1
+        env:
+          username: ${{ secrets.DOCKER_USERNAME }}
         if: ${{env.username != ''}}
         with:
           username: ${{ secrets.DOCKER_USERNAME }}
