--- a/package.json
+++ b/package.json
@@ -29,13 +29,16 @@
   "dependencies": {
     "@monaco-editor/react": "4.3.1",
     "@patternfly/patternfly": "4.151.4",
+    "@patternfly/react-code-editor": "^4.39.5",
     "@patternfly/react-core": "4.168.8",
     "@rhoas/app-services-ui-shared": "^0.15.4",
     "ajv": "^8.8.2",
+    "monaco-editor-webpack-plugin": "^7.0.1",
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-error-boundary": "3.1.4",
     "react-flow-renderer": "^9.7.3",
+    "react-monaco-editor": "^0.47.0",
     "react-router-dom": "5.3.0",
     "react-router-last-location": "2.0.1",
     "react-shadow": "19.0.2",
