--- a/package.json
+++ b/package.json
@@ -22,23 +22,24 @@
     "lint-staged": "yarn lint:fix && yarn format:fix",
     "prepublish": "npm run build",
     "storybook": "start-storybook -p 6006 -s public",
-    "test": "jest src/**/*.test.ts*",
-    "test:coverage": "jest --coverage --watchAll=false",
-    "test:watch": "jest --watch"
+    "test": "yarn run jest src/**/*.test.ts*",
+    "test:coverage": "yarn run jest --coverage --watchAll=false",
+    "test:watch": "yarn run jest --watch"
   },
   "dependencies": {
     "@patternfly/patternfly": "4.151.4",
-    "@patternfly/react-code-editor": "^4.39.5",
-    "@patternfly/react-core": "4.168.8",
+    "@patternfly/react-code-editor": "^4.39.19",
+    "@patternfly/react-core": "4.198.19",
+    "@patternfly/react-icons": "4.49.19",
     "@rhoas/app-services-ui-shared": "^0.15.4",
     "ajv": "^8.8.2",
-    "monaco-editor": "^0.32.1",
-    "monaco-editor-webpack-plugin": "^7.0.1",
+    "monaco-editor": "^0.21.3",
+    "monaco-editor-webpack-plugin": "^2.1.0",
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-error-boundary": "3.1.4",
     "react-flow-renderer": "^9.7.3",
-    "react-monaco-editor": "^0.47.0",
+    "react-monaco-editor": "^0.41.2",
     "react-router-dom": "5.3.0",
     "react-router-last-location": "2.0.1",
     "react-shadow": "19.0.2",
@@ -51,7 +52,6 @@
     "yarn": "2.4.3"
   },
   "devDependencies": {
-    "@patternfly/react-icons": "4.19.8",
     "@storybook/addon-actions": "^6.4.19",
     "@storybook/addon-docs": "^6.4.19",
     "@storybook/addon-links": "^6.4.19",
