--- a/package.json
+++ b/package.json
@@ -88,7 +88,7 @@
     "file-loader": "^6.2.0",
     "file-selector": "^0.4.0",
     "html-webpack-plugin": "5.5.0",
-    "jest": "^27.5.1",
+    "jest": "27.4.0",
     "jest-environment-jsdom": "^27.5.1",
     "lint-staged": "11.2.5",
     "mini-css-extract-plugin": "2.4.3",
