fix for e2e tests
revert change to App.tsx

add cypress to normal deps list

revert change to cypress

run unit tests on pull requests

help it find cypress

--- a/.github/workflows/e2e-tests.yml
+++ b/.github/workflows/e2e-tests.yml
@@ -16,6 +16,7 @@ jobs:
           build: yarn build
           start: yarn start
           record: true
+          command-prefix: yarn dlx
         env:
           CYPRESS_PROJECT_ID: ${{ secrets.CYPRESS_PROJECT_ID }}
           CYPRESS_RECORD_KEY: ${{ secrets.CYPRESS_RECORD_KEY }}
