change cypress command to e2e

--- a/package.json
+++ b/package.json
@@ -13,8 +13,8 @@
     "build-storybook": "build-storybook -s public",
     "chromatic": "npx chromatic",
     "clean": "rimraf dist",
-    "cypress": "cypress run",
-    "cypress:open": "cypress open",
+    "e2e": "cypress open",
+    "e2e:headless": "cypress run",
     "format": "prettier --check 'src'",
     "format:fix": "prettier --write --ignore-unknown 'src'",
     "lint": "eslint --ext .ts,.tsx,.js ./src",
