--- a/package.json
+++ b/package.json
@@ -75,7 +75,7 @@
     "chromatic": "^6.4.1",
     "css-loader": "^6.6.0",
     "css-minimizer-webpack-plugin": "^3.4.1",
-    "cypress": "^9.2.1",
+    "cypress": "9.5.3",
     "dotenv-webpack": "7.0.3",
     "eslint": "7.32.0",
     "eslint-config-prettier": "8.3.0",
