--- a/package.json
+++ b/package.json
@@ -104,9 +104,9 @@
     "tslib": "^2.3.1",
     "typescript": "4.4.4",
     "url-loader": "4.1.1",
-    "webpack": "5.60.0",
-    "webpack-cli": "4.9.1",
-    "webpack-dev-server": "^4.7.4",
+    "webpack": "5.71.0",
+    "webpack-cli": "4.9.2",
+    "webpack-dev-server": "4.7.4",
     "webpack-merge": "^5.8.0",
     "whatwg-fetch": "^3.6.2",
     "yaml-loader": "0.6.0"
