--- a/package.json
+++ b/package.json
@@ -27,10 +27,11 @@
     "test:watch": "jest --watch"
   },
   "dependencies": {
-    "@patternfly/patternfly": "4.151.4",
+    "@patternfly/patternfly": "4.185.1",
     "@patternfly/react-code-editor": "^4.39.5",
     "@patternfly/react-core": "4.198.19",
     "@patternfly/react-icons": "4.49.19",
+    "@patternfly/react-styles": "4.48.19",
     "@rhoas/app-services-ui-shared": "^0.15.4",
     "ajv": "^8.8.2",
     "monaco-editor": "^0.32.1",
