feature(e2e): Add backend service and multiple browsers

--- a/.github/workflows/e2e-tests.yml
+++ b/.github/workflows/e2e-tests.yml
@@ -1,23 +1,137 @@
-name: E2E Tests (Cypress)
+name: 🏗️ E2E Tests (Cypress)
 
-on: [push]
+on: [push, pull_request, workflow_dispatch]
 
 jobs:
-  cypress-run:
+
+  install:
     runs-on: ubuntu-latest
+    container:
+      image: cypress/browsers:node16.14.0-slim-chrome99-ff97
+
+    outputs:
+      record: ${{ steps.should-we-record.outputs.record }}
+
     steps:
-      - name: Checkout
+      - name: 👷‍♀️ Checkout
         uses: actions/checkout@v2
-      # Install NPM dependencies, cache them correctly
-      # and run all Cypress tests
-      - name: Cypress run
+
+      - name: 🎥 Should we record?
+        run: echo '::set-output name=record::${{  env.CYPRESS_PROJECT_ID != '' }}'
+        id: should-we-record
+
+      - name: 👩‍🏭 Cypress install
         uses: cypress-io/github-action@v2
         with:
+          runTests: false
           build: yarn build
-          start: yarn start
           record: true
           command-prefix: yarn dlx
         env:
           CYPRESS_PROJECT_ID: ${{ secrets.CYPRESS_PROJECT_ID }}
           CYPRESS_RECORD_KEY: ${{ secrets.CYPRESS_RECORD_KEY }}
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+
+      - name: 💾 Save build folder
+        uses: actions/upload-artifact@v2
+        with:
+          name: dist
+          if-no-files-found: error
+          path: dist
+          
+  test-on-firefox:
+    needs: install
+    runs-on: ubuntu-latest
+    container:
+      image: cypress/browsers:node16.14.0-slim-chrome99-ff97
+      options: --user 1001
+
+    services:
+      kaoto:
+        image: kaotoio/backend:nightly
+        ports:
+        # will assign a random free host port
+          - 8081/tcp
+    steps:
+      - name: 👷‍♀️ Checkout
+        uses: actions/checkout@v2
+
+      - name: 🗄️ Download the build folders
+        uses: actions/download-artifact@v2
+        with:
+          name: dist
+          path: dist
+
+      - name: 🤓 Set KAOTO_API
+        run: echo "KAOTO_API=http://kaoto:8081" > .env
+      - name: 🔨 Cypress run
+        uses: cypress-io/github-action@v2
+        with:
+          browser: firefox
+          # we have already installed all dependencies above
+          install: false
+          start: yarn start
+          record: ${{needs.install.outputs.record}}
+          wait-on: 'http://localhost:1337'
+          wait-on-timeout: 120
+          command-prefix: yarn dlx
+        env:
+          CYPRESS_PROJECT_ID: ${{ secrets.CYPRESS_PROJECT_ID }}
+          CYPRESS_RECORD_KEY: ${{ secrets.CYPRESS_RECORD_KEY }}
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+
+      - name: 💾 Save videos
+        if: always()
+        uses: actions/upload-artifact@v2
+        with:
+          name: videos-firefox
+          path: cypress/videos
+
+  test-on-chrome:
+    needs: install
+    runs-on: ubuntu-latest
+    container:
+      image: cypress/browsers:node16.14.0-slim-chrome99-ff97
+      options: --user 1001
+
+    services:
+      kaoto:
+        image: kaotoio/backend:nightly
+        ports:
+        # will assign a random free host port
+          - 8081/tcp
+    steps:
+      - name: 👷‍♀️ Checkout
+        uses: actions/checkout@v2
+
+      - name: 🗄️ Download the build folders
+        uses: actions/download-artifact@v2
+        with:
+          name: dist
+          path: dist
+
+      - name: 🤓 Set KAOTO_API
+        run: echo "KAOTO_API=http://kaoto:8081" > .env
+
+      - name: 🔨 Cypress run
+        uses: cypress-io/github-action@v2
+        with:
+          browser: chrome
+          # we have already installed all dependencies above
+          install: false
+          start: yarn start
+          record: ${{needs.install.outputs.record}}
+          wait-on: 'http://localhost:1337'
+          wait-on-timeout: 120
+          command-prefix: yarn dlx
+        env:
+          CYPRESS_PROJECT_ID: ${{ secrets.CYPRESS_PROJECT_ID }}
+          CYPRESS_RECORD_KEY: ${{ secrets.CYPRESS_RECORD_KEY }}
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+
+      - name: 💾 Save videos
+        if: always()
+        uses: actions/upload-artifact@v2
+        with:
+          name: videos-chrome
+          path: cypress/videos
