fix(e2e-job): cypress image bug https://github.com/cypress-io/github-action/issues/446#issuecomment-968192021

--- a/.github/workflows/e2e-tests.yml
+++ b/.github/workflows/e2e-tests.yml
@@ -8,6 +8,7 @@ jobs:
     runs-on: ubuntu-latest
     container:
       image: cypress/browsers:node16.14.0-slim-chrome99-ff97
+      options: --user 1001
 
     outputs:
       record: ${{ steps.should-we-record.outputs.record }}
