--- a/.github/workflows/dependabot-yarn-fix.yml
+++ b/.github/workflows/dependabot-yarn-fix.yml
@@ -52,7 +52,7 @@ jobs:
           key: ${{ runner.os }}-yarn-${{ hashFiles('**/yarn.lock') }}
           restore-keys: ${{ runner.os }}-yarn-
 
-      - run: yarn install --skip-builds
+      - run: yarn install
 
       - run: yarn dedupe
 
