--- a/.github/workflows/generate-docker-image.yml
+++ b/.github/workflows/generate-docker-image.yml
@@ -37,6 +37,8 @@ jobs:
             type=semver,pattern={{major}}.{{minor}}
             type=semver,pattern={{major}}
             type=sha
+          username: ${{ secrets.DOCKER_USERNAME }}
+        if: ${{env.username != ''}}
       - name: Build and push
         uses: docker/build-push-action@v2
         with:
