--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "@patternfly/react-icons": "4.65.1",
     "@rhoas/app-services-ui-shared": "^0.16.0",
     "ajv": "^8.8.2",
+    "cypress-file-upload": "^5.0.8",
     "monaco-editor": "^0.33.0",
     "monaco-editor-webpack-plugin": "^7.0.1",
     "react": "17.0.2",
@@ -52,6 +53,7 @@
     "yarn": "2.4.3"
   },
   "devDependencies": {
+    "@4tw/cypress-drag-drop": "^2.1.0",
     "@storybook/addon-actions": "^6.5.0-alpha.54",
     "@storybook/addon-docs": "^6.5.0-rc.0",
     "@storybook/addon-links": "^6.5.0-alpha.54",
