--- a/package.json
+++ b/package.json
@@ -37,7 +37,7 @@
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-error-boundary": "3.1.4",
-    "react-flow-renderer": "^9.7.3",
+    "react-flow-renderer": "10.3.6",
     "react-monaco-editor": "^0.48.0",
     "react-router-dom": "5.3.3",
     "react-router-last-location": "2.0.1",
