--- a/.github/workflows/e2e-tests.yml
+++ b/.github/workflows/e2e-tests.yml
@@ -53,7 +53,7 @@ jobs:
 
     services:
       kaoto:
-        image: kaotoio/backend:nightly
+        image: kaotoio/backend:main
         ports:
         # will assign a random free host port
           - 8081/tcp
@@ -107,7 +107,7 @@ jobs:
 
     services:
       kaoto:
-        image: kaotoio/backend:nightly
+        image: kaotoio/backend:main
         ports:
         # will assign a random free host port
           - 8081/tcp
@@ -162,7 +162,7 @@ jobs:
 
     services:
       kaoto:
-        image: kaotoio/backend:nightly
+        image: kaotoio/backend:main
         ports:
         # will assign a random free host port
           - 8081/tcp
