--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "@patternfly/react-code-editor": "^4.62.3",
     "@patternfly/react-core": "4.221.3",
     "@patternfly/react-icons": "4.72.3",
+    "@patternfly/react-table": "^4.93.1",
     "@rhoas/app-services-ui-shared": "^0.16.0",
     "ajv": "^8.8.2",
     "monaco-editor": "^0.33.0",
