--- a/package.json
+++ b/package.json
@@ -6,6 +6,15 @@
   "engines": {
     "node": ">=14.x"
   },
+  "main": "dist/index.js",
+  "types": "dist/index.d.ts",
+  "maintainers": [
+    {
+      "name": "Rachel Yordán",
+      "email": "rachelyordan@gmail.com"
+    }
+  ],
+  "license": "Apache-2.0",
   "scripts": {
     "start": "webpack serve --mode development --hot --progress --config webpack.dev.js ",
     "prod": "webpack serve --mode production --port 8080 --allowed-hosts all --progress --config webpack.prod.js ",
