--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "@patternfly/react-code-editor": "^4.62.3",
     "@patternfly/react-core": "4.221.3",
     "@patternfly/react-icons": "4.72.3",
+    "@patternfly/react-log-viewer": "^4.69.1",
     "@patternfly/react-table": "^4.93.1",
     "@rhoas/app-services-ui-shared": "^0.16.0",
     "ajv": "^8.8.2",
