--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "@patternfly/react-table": "^4.93.1",
     "@rhoas/app-services-ui-shared": "^0.16.0",
     "ajv": "^8.8.2",
+    "immer": "^9.0.15",
     "monaco-editor": "^0.33.0",
     "monaco-editor-webpack-plugin": "^7.0.1",
     "react": "18.0.0",
