add baseUrl + other exposed modules

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,10 +1,14 @@
 {
+  "baseUrl": "./",
   "extends": "./tsconfig.build.json",
   "compilerOptions": {
     "allowJs": false,
     "baseUrl": ".",
     "declaration": true,
-    "typeRoots": ["./node_modules/@types"],
+    "paths": {
+      "*": ["*", "types/*"]
+    },
+    "typeRoots": ["./node_modules/@types"]
   },
-  "include": ["src", "webpack.config.js", "setupTests.ts"]
+  "include": ["src", "webpack.common.js", "setupTests.ts"]
 }
