defaults required for typings, general tarball for consumption by extensions

--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "react-router-dom": "5.3.3",
     "react-router-last-location": "2.0.1",
     "react-shadow": "19.0.3",
+    "tar-webpack-plugin": "^0.1.1",
     "uniforms": "^3.6.2",
     "uniforms-bridge-json-schema": "^3.9.1",
     "uniforms-patternfly": "^4.7.5",
@@ -78,6 +79,7 @@
     "@types/uuid": "8.3.4",
     "@typescript-eslint/eslint-plugin": "^5.30.7",
     "@typescript-eslint/parser": "5.29.0",
+    "copy-webpack-plugin": "^11.0.0",
     "css-loader": "^6.6.0",
     "css-minimizer-webpack-plugin": "^4.0.0",
     "cypress": "9.7.0",
