--- a/package.json
+++ b/package.json
@@ -72,7 +72,7 @@
     "@testing-library/user-event": "^14.2.1",
     "@trivago/prettier-plugin-sort-imports": "^3.1.1",
     "@types/jest": "^27.4.1",
-    "@types/react": "^17.0.44",
+    "@types/react": "18.0.0",
     "@types/react-dom": "18.0.3",
     "@types/react-router-dom": "5.3.3",
     "@types/testing-library__jest-dom": "5.14.5",
@@ -102,6 +102,7 @@
     "null-loader": "^4.0.1",
     "prettier": "2.7.1",
     "prop-types": "15.8.1",
+    "react-refresh": "^0.14.0",
     "rimraf": "3.0.2",
     "simple-zustand-devtools": "^1.1.0",
     "source-map-loader": "4.0.0",
