--- a/package.json
+++ b/package.json
@@ -28,9 +28,9 @@
     "test:watch": "jest --watch"
   },
   "dependencies": {
-    "@patternfly/patternfly": "4.196.7",
+    "@patternfly/patternfly": "^4.206.3",
     "@patternfly/react-code-editor": "^4.62.3",
-    "@patternfly/react-core": "4.221.3",
+    "@patternfly/react-core": "^4.231.8",
     "@patternfly/react-icons": "4.72.3",
     "@patternfly/react-log-viewer": "^4.69.1",
     "@patternfly/react-table": "^4.93.1",
