--- a/package.json
+++ b/package.json
@@ -116,8 +116,7 @@
     "webpack-cli": "4.10.0",
     "webpack-dev-server": "4.9.2",
     "webpack-merge": "^5.8.0",
-    "whatwg-fetch": "^3.6.2",
-    "yaml-loader": "0.8.0"
+    "whatwg-fetch": "^3.6.2"
   },
   "lint-staged": {
     "*.js": "eslint --cache --fix",
